Fixing bug 260385. Prevent popups from opening from beforeunload events. r=danm.moz@gmail.com, sr=bzbarsky@mit.edu, a=asa@mozilla.org