dom/src/base/nsGlobalWindow.cpp
@@ -389,11 +389,11 @@ GlobalWindowImpl::SetOpenerScriptURL(nsIURI* aURI)
 }
 
 PopupControlState
-PushPopupControlState(PopupControlState aState)
+PushPopupControlState(PopupControlState aState, PRBool aForce)
 {
   PopupControlState oldState = gPopupControlState;
 
-  if (aState < gPopupControlState) {
+  if (aState < gPopupControlState || aForce) {
     gPopupControlState = aState;
   }
 
@@ -409,7 +409,7 @@ PopPopupControlState(PopupControlState aState)
 PopupControlState
 GlobalWindowImpl::PushPopupControlState(PopupControlState aState) const
 {
-  return ::PushPopupControlState(aState);
+  return ::PushPopupControlState(aState, PR_FALSE);
 }
 
 void
@@ -2954,7 +2954,6 @@ PopupControlState
 GlobalWindowImpl::CheckForAbusePoint()
 {
   nsCOMPtr<nsIDocShellTreeItem> item(do_QueryInterface(mDocShell));
-  PRBool isBeingDestroyed = PR_FALSE;
 
   if (item) {
     PRInt32 type = nsIDocShellTreeItem::typeChrome;
@@ -2962,26 +2961,11 @@ GlobalWindowImpl::CheckForAbusePoint()
     item->GetItemType(&type);
     if (type != nsIDocShellTreeItem::typeContent)
       return openAllowed;
-
-    while (item) {
-      nsCOMPtr<nsIDocShell> docShell(do_QueryInterface(item));
-
-      docShell->IsBeingDestroyed(&isBeingDestroyed);
-
-      if (isBeingDestroyed) {
-        break;
-      }
-
-      nsIDocShellTreeItem *tmp = item;
-      tmp->GetParent(getter_AddRefs(item));
-    }
   }
 
   // level of abuse we've detected, initialized to the current popup
-  // state, except in the case where this window is being destroyed
-  // since then we override the current state and prevent popups
-  // alltogether.
-  PopupControlState abuse = isBeingDestroyed ? openAbused : gPopupControlState;
+  // state
+  PopupControlState abuse = gPopupControlState;
 
   // limit the number of simultaneously open popups
   if (abuse == openAbused || abuse == openControlled) {
